--- a/index.html
+++ b/index.html
@@ -25,6 +25,66 @@
 
 </head>
 <body class="lexend-font">
+<header>
+  <!-- navbar -->
+<nav class="container">
+    <div class="navbar h-[100px]  bg-[#F9F7F3]">
+  <div class="navbar-start">
+     <button class="btn bg-[#B4F461]">Blog</button>
+  </div>
+  <div class="navbar-center gap-3 flex items-center">
+     <div><img src="assets/logo.png" alt=""></div>
+     <div><h1>Donate Bangladesh</h1></div>
+  </div>
+  <div class="navbar-end gap">
+     <div><img src="assets/coin.png" alt=""></div>
+     <div><h3>5500 BDT</h3></div>
+  </div>
+</div>
+
+</nav>
+<!-- button after nav -->
+
+<div class="flex gap-3 justify-center mt-[50px]">
+    <div><button class="btn bg-[#B4F461]">Donation</button></div>
+    <div><button class="btn">History</button></div>
+</div>
+
+
+</header>
+<main>
+
+    <!-- card -->
+
+    <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 mt-[40px] rounded-[16px] py-10 px-20 ">
+        <div class="flex gap-10 items-center">
+        <img src="assets/noakhali.png" alt="">
+
+        <div class="">
+            <div class="py-4">
+                <button class="flex gap-2 items-center">
+                 <img src="./assets/coin.png" alt="" class="">
+                <p id="noakhali-current-amount" class="">0 BDT</p>
+            </button>
+            </div>
+            <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
+            <p class="">The recent floods in Noakhali have caused significant damage to homes
+                        infrastructure.
+                        Your donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and making a positive impact on the lives of those in need.</p>
+
+           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+        </div>
+
+    </div>
+
+    </div>
+</main>
+<footer>
+
+</footer>
     
 </body>
 </html>
