--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
 
     <!-- card -->
 
-    <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 mt-[40px] rounded-[16px] py-10 px-20 ">
-        <div class="flex gap-10 items-center">
+    <div class="p-20">
+        <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 rounded-[16px] py-10 px-20 ">
+        <div class="lg:flex gap-10 items-center">
         <img src="assets/noakhali.png" alt="">
 
         <div class="">
             <div class="py-4">
-                <button class="flex gap-2 items-center">
+                <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border ">
                  <img src="./assets/coin.png" alt="" class="">
                 <p id="noakhali-current-amount" class="">0 BDT</p>
             </button>
@@ -81,6 +82,62 @@
     </div>
 
     </div>
+    
+    <!-- card2 -->
+      <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 mt-[40px] rounded-[16px] py-10 px-20 ">
+        <div class="lg:flex gap-10 items-center">
+        <img src="assets/feni.png" alt="">
+
+        <div class="">
+            <div class="py-4">
+                <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border">
+                 <img src="./assets/coin.png" alt="" class="">
+                <p id="noakhali-current-amount" class="">0 BDT</p>
+            </button>
+            </div>
+            <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
+            <p class="">The recent floods in Noakhali have caused significant damage to homes
+                        infrastructure.
+                        Your donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and making a positive impact on the lives of those in need.</p>
+
+           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+        </div>
+
+    </div>
+
+    </div>
+
+    <!-- card3 -->
+      <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 mt-[40px] rounded-[16px] py-10 px-20 ">
+        <div class="lg:flex gap-10 items-center">
+        <img src="assets/quota-protest.png" alt="">
+
+        <div class="">
+            <div class="py-4">
+                <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border">
+                 <img src="./assets/coin.png" alt="" class="">
+                <p id="noakhali-current-amount" class="">0 BDT</p>
+            </button>
+            </div>
+            <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
+            <p class="">The recent floods in Noakhali have caused significant damage to homes
+                        infrastructure.
+                        Your donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and making a positive impact on the lives of those in need.</p>
+
+           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+        </div>
+
+    </div>
+
+    </div>
+    </div>
+
 </main>
 <footer>
 
