--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
     </div>
 
 </main>
-<footer>
+<footer class="bg-[#F9F7F3]">
+
+    <p class="py-[30px] text-center"> Let's Donate for change.</p>
 
 </footer>
     
