--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <nav class="container">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
   <div class="navbar-start">
-     <button class="btn bg-[#B4F461]">Blog</button>
+     <button id="Blog-btn" class="btn bg-[#B4F461]">Blog</button>
   </div>
   <div class="navbar-center gap-3 flex items-center">
      <div><img src="assets/logo.png" alt=""></div>
@@ -145,5 +145,8 @@
 
 </footer>
     
+<!-- ja file -->
+ <script src="js/blog.js"></script>
+
 </body>
 </html>
