blog page to home page

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 <nav class="container">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
   <div class="navbar-start">
-     <button class="btn bg-[#B4F461]">Blog</button>
+     <button id="Home-btn" class="btn bg-[#B4F461]">Home</button>
   </div>
   <div class="navbar-center gap-3 flex items-center">
      <div><img src="assets/logo.png" alt=""></div>
@@ -97,5 +97,8 @@
     <p class="py-[30px] text-center">Stay updated!</p>
 
 </footer>
+
+<!-- js file -->
+ <script src="js/home.js"></script>
 </body>
 </html>
