--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 
 </head>
 <body class="lexend-font">
-    <header>
+    <header class="bg-[#F9F7F3] sticky top-0 z-50">
   <!-- navbar -->
 <nav class="container">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
