--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 </head>
 <body class="lexend-font">
-<header>
+<header class="bg-[#F9F7F3] sticky top-0 z-50">
   <!-- navbar -->
-<nav class="container">
+<nav class="container ">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
   <div class="navbar-start">
      <button id="Blog-btn" class="btn bg-[#B4F461]">Blog</button>
@@ -36,18 +36,20 @@
      <div><img src="assets/logo.png" alt=""></div>
      <div><h1>Donate Bangladesh</h1></div>
   </div>
-  <div class="navbar-end gap">
-     <div><img src="assets/coin.png" alt=""></div>
-     <div><h3>5500 BDT</h3></div>
+  <div class="navbar-end">
+    <img src="./assets/coin.png" alt="" class="">
+    <p id="Your-current-amount" class="">5550</p>
+    <p>BDT</p>
+            
   </div>
 </div>
 
 </nav>
 <!-- button after nav -->
 
-<div class="flex gap-3 justify-center mt-[50px]">
-    <div><button class="btn bg-[#B4F461]">Donation</button></div>
-    <div><button class="btn">History</button></div>
+<div class="flex gap-3 justify-center py-4 mt-[10px]">
+    <div><button id="Donation-btn" class="btn bg-[#B4F461]">Donation</button></div>
+    <div><button id="History-btn" class="btn">History</button></div>
 </div>
 
 
@@ -65,7 +67,8 @@
             <div class="py-4">
                 <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border ">
                  <img src="./assets/coin.png" alt="" class="">
-                <p id="noakhali-current-amount" class="">0 BDT</p>
+                <p id="noakhali-current-amount" class="">0 </p>
+                <p>BDT</p>
             </button>
             </div>
             <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
@@ -75,8 +78,8 @@
                         contribution, big or small, makes difference. Please join us in supporting the relief efforts
                         and making a positive impact on the lives of those in need.</p>
 
-           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
-           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+           <div class="form-control py-4"> <input type="text" id="amountForNoakhli" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button id="donateNoakhali" class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
         </div>
 
     </div>
@@ -92,7 +95,7 @@
             <div class="py-4">
                 <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border">
                  <img src="./assets/coin.png" alt="" class="">
-                <p id="noakhali-current-amount" class="">0 BDT</p>
+                <p id="flood-current-amount" class="">0</p><p>BDT</p>
             </button>
             </div>
             <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
@@ -102,8 +105,8 @@
                         contribution, big or small, makes difference. Please join us in supporting the relief efforts
                         and making a positive impact on the lives of those in need.</p>
 
-           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
-           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+           <div class="form-control py-4"> <input type="text" id="amountForFlood" name="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button id="Donate-btnFlood" class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
         </div>
 
     </div>
@@ -138,6 +141,30 @@
     </div>
     </div>
 
+<!-- show modal -->
+
+
+<!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+<dialog id="my_modal_1" class="modal p-6">
+  <div class="modal-box">
+    <div class="flex flex-col justify-center items-center p-4">
+        <img src="assets/coin.png" alt="">
+    <h3 class="text-lg font-bold">Congrats!!!</h3>
+    <p class="py-4">Successfully</p>
+   <h3>You have Donate for save!!</h3>
+    </div>
+    <div class="modal-action flex flex-col justify-center items-center">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
+
+
 </main>
 <footer class="bg-[#F9F7F3]">
 
@@ -147,6 +174,7 @@
     
 <!-- ja file -->
  <script src="js/blog.js"></script>
+ <script src="js/index.js"></script>
 
 </body>
 </html>
