--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="py-4">
                 <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border">
                  <img src="./assets/coin.png" alt="" class="">
-                <p id="noakhali-current-amount" class="">0 BDT</p>
+                <p id="current-Q" class="">0 BDT</p>
             </button>
             </div>
             <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
@@ -132,8 +132,8 @@
                         contribution, big or small, makes difference. Please join us in supporting the relief efforts
                         and making a positive impact on the lives of those in need.</p>
 
-           <div class="form-control py-4"> <input type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
-           <button class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
+           <div class="form-control py-4"> <input id="input-Q" type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
+           <button id="donate-Q" class="btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
         </div>
 
     </div>
