--- a/blog.html
+++ b/blog.html
@@ -25,9 +25,9 @@
 
 </head>
 <body class="lexend-font">
-    <header class="bg-[#F9F7F3] sticky top-0 z-50">
+    <header class=" sticky top-0 z-50">
   <!-- navbar -->
-<nav class="container">
+<nav class="container bg-[#F9F7F3]">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
   <div class="navbar-start">
      <button id="Home-btn" class="btn bg-[#B4F461]">Home</button>
@@ -43,6 +43,11 @@
 </div>
 
 </nav>
+
+<div class="flex gap-3 justify-center py-4 mt-[10px]">
+    <div><button id="Donation-btn" class="btn bg-[#B4F461]">Donation</button></div>
+    <div><button id="History-btn" class="btn">History</button></div>
+</div>
 
 </header>
 
