--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 
 </head>
 <body class="lexend-font">
-<header class="bg-[#F9F7F3] sticky top-0 z-50">
+<header class="sticky top-0 z-50">
   <!-- navbar -->
-<nav class="container ">
+<nav class="container bg-[#F9F7F3]  ">
     <div class="navbar h-[100px]  bg-[#F9F7F3]">
   <div class="navbar-start">
-     <button id="Blog-btn" class="btn bg-[#B4F461]">Blog</button>
+     <button id="Blog-btn" class="btn bg-[#B4F461] mx-5">Blog</button>
   </div>
   <div class="navbar-center gap-3 flex items-center">
      <div><img src="assets/logo.png" alt=""></div>
      <div><h1>Donate Bangladesh</h1></div>
   </div>
-  <div class="navbar-end">
+  <div class="navbar-end mx-5">
     <img src="./assets/coin.png" alt="" class="">
     <p id="Your-current-amount" class="">5550</p>
     <p>BDT</p>
@@ -47,7 +47,7 @@
 </nav>
 <!-- button after nav -->
 
-<div class="flex gap-3 justify-center py-4 mt-[10px]">
+<div class="flex gap-3 justify-center py-4 mt-[20px]">
     <div><button id="Donation-btn" class="btn bg-[#B4F461]">Donation</button></div>
     <div><button id="History-btn" class="btn">History</button></div>
 </div>
@@ -58,7 +58,7 @@
 
     <!-- card -->
 
-    <div class="p-20">
+    <div id="donation-page" class="p-20">
         <div class="flex flex-col lg:flex-row justify-between gap-[100px] border border-solid border-[#1111111A] border-opacity-10 rounded-[16px] py-10 px-20 ">
         <div class="lg:flex gap-10 items-center">
         <img src="assets/noakhali.png" alt="">
@@ -98,12 +98,8 @@
                 <p id="flood-current-amount" class="">0</p><p>BDT</p>
             </button>
             </div>
-            <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
-            <p class="">The recent floods in Noakhali have caused significant damage to homes
-                        infrastructure.
-                        Your donation will help provide essential supplies and to those affected by this disaster. Every
-                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
-                        and making a positive impact on the lives of those in need.</p>
+            <h1 class="font-bold text-2xl py-2">Donate for Flood Relief in Feni,Bangladesh</h1>
+            <p class="">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
 
            <div class="form-control py-4"> <input type="text" id="amountForFlood" name="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
            <button id="Donate-btnFlood" class=" btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
@@ -122,15 +118,11 @@
             <div class="py-4">
                 <button class="btn flex gap-2 items-center bg-[#1111110D] p-2 border">
                  <img src="./assets/coin.png" alt="" class="">
-                <p id="current-Q" class="">0 BDT</p>
+                <p id="current-Q" class="">0 <p></p> BDT</p>
             </button>
             </div>
-            <h1 class="font-bold text-2xl py-2">Donate for Flood at Noakhali, Bangladesh</h1>
-            <p class="">The recent floods in Noakhali have caused significant damage to homes
-                        infrastructure.
-                        Your donation will help provide essential supplies and to those affected by this disaster. Every
-                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
-                        and making a positive impact on the lives of those in need.</p>
+            <h1 class="font-bold text-2xl py-2">Aid for Injured in the Quota Movement</h1>
+            <p class="">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
 
            <div class="form-control py-4"> <input id="input-Q" type="text" name="" id="" class="border rounded-[10px] py-4 px-2" placeholder="Write Donation Amount" required/></div>
            <button id="donate-Q" class="btn px-8 py-4 font-seminold bg-[#B4F461] w-full mt-[10px]">Donate Now</button>
@@ -141,6 +133,12 @@
     </div>
     </div>
 
+<!-- transaction container -->
+
+  <div id="transaction-container" class="hidden"></div>
+
+
+
 <!-- show modal -->
 
 
@@ -149,15 +147,17 @@
 <dialog id="my_modal_1" class="modal p-6">
   <div class="modal-box">
     <div class="flex flex-col justify-center items-center p-4">
-        <img src="assets/coin.png" alt="">
-    <h3 class="text-lg font-bold">Congrats!!!</h3>
-    <p class="py-4">Successfully</p>
-   <h3>You have Donate for save!!</h3>
+       
+    <h3 class="text-lg font-extrabold">Congrats!!!</h3>
+     <img src="assets/coin.png" alt="">
+     <h3>You have Donate for HumanKind!!</h3>
+    <p class="py-4 font-bold">Successfully</p>
+   
     </div>
     <div class="modal-action flex flex-col justify-center items-center">
       <form method="dialog">
         <!-- if there is a button in form, it will close the modal -->
-        <button class="btn">Close</button>
+        <button class="btn">Close confirmation!</button>
       </form>
     </div>
   </div>
@@ -166,7 +166,7 @@
 
 
 </main>
-<footer class="bg-[#F9F7F3]">
+<footer id="ftr" class="bg-[#F9F7F3]">
 
     <p class="py-[30px] text-center"> Let's Donate for change.</p>
 
